fix bug with overlapping links on TripCard, fix page structure and css

--- a/src/components/TripCard/TripCard.module.css
+++ b/src/components/TripCard/TripCard.module.css
@@ -1,31 +1,24 @@
 .card-container {
   width: 100%;
-  max-width: 1000px;
-  min-height: 250px;
+  max-width: 900px;
   background-color: white;
-  padding: 10px;
+  padding: 10px 20px;
   filter: drop-shadow(8px 6px rgba(0, 0, 0, .1));
   border-radius: 5px;
-  border: 1px solid rgba(33, 150, 243, .5);
+  border: 1px solid #2196f380;
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
 }
 
-.link:first-of-type {
-  margin-top: 30px;
-}
-
-.link:last-of-type {
-  margin-bottom: 30px;
+.info-container {
+  display: flex;
+  flex-direction: column;
 }
 
 .link {
   text-decoration: none;
   color: black;
-  width: 100%;
-  display: flex;
-  justify-content: center;
 }
 
 .card-header {
@@ -39,23 +32,10 @@
   font-weight: 400;
 }
 
-.trip-info {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.travel-info {
-  margin: unset;
-  padding: unset;
-}
-
 .image {
   border: 1px solid black;
   height: 250px;
   width: 250px;
-  align-self: flex-end;
   border: none;
   background-position: center;
   background-size: cover;
@@ -68,7 +48,6 @@
 .btn-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   gap: 20px;
   border-right: 1px solid rgba(33, 150, 243, .1);
   border-left: 1px solid rgba(33, 150, 243, .1);
@@ -87,4 +66,9 @@
 .btn:hover {
   cursor: pointer;
   background-color: rgb(0, 0, 0, .2);
+}
+
+.btn a {
+  color: black;
+  text-decoration: none;
 }
