--- a/src/pages/TripList/TripList.module.css
+++ b/src/pages/TripList/TripList.module.css
@@ -2,9 +2,9 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   gap: 30px;
   width: 100%;
-  text-align: center;
   animation: fade-in 1s ease-in-out;
 }
 
